--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,6 @@ jobs:
                   python-version: 3.12
 
             - name: Run tests
-                run: |
-                cd Sprint1/Lab5
+              run: |
+                  cd Sprint1/Lab5
+                  python -m unittest discover
